Implemented few more event nodes

--- a/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
+++ b/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
@@ -159,20 +159,30 @@
     <Compile Include="Nodes\ActionNodes\ActionNode_ThreatSinglePct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Aggro.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_Charmed.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_CharmedTarget.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_Damaged.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Death.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Evade.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyHealth.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyIsCC.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyMissingBuff.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_HasAura.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_HealthPct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Kill.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_LOS.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_ManaPct.cs" />
-    <Compile Include="Nodes\EventNodes\EventNode_QuestAccepted.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_Passenger.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_Quest.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Range.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_ReachedHome.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_ReceiveEmote.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_Reset.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Respawn.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Spellhit.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_SpellhitTarget.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_SummonedUnit.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_TargetBuffed.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_TargetHealthPct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_TargetManaPct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Update.cs" />
