--- a/.gitignore
+++ b/.gitignore
@@ -259,336 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-Project_NodeAI/docs/html/annotated.html
-Project_NodeAI/docs/html/bc_s.png
-Project_NodeAI/docs/html/bdwn.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_action_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_action_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_app.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_app.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_app-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_creature_text.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_creature_text-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_database_search_window.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_database_search_window.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_database_search_window-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_event_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_event_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_main_window.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_main_window.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_main_window-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_attribute.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_attribute.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_attribute-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_connector.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_connector.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_connector-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_data.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_node_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_node-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_action_node.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_action_node.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_action_node-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_node_talk.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_node_talk.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_node_talk-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_event_node.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_event_node.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_event_node-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_node_quest.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_node_quest.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_node_quest-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_general_node.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_general_node.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_general_node-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_npc.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_npc.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_npc-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_quest.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_quest.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_quest-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_text.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_text.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_text-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_npc_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_npc_data.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_npc_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_quest_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_quest_data.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_quest_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_sql_exporter.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_sql_exporter-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_text_data.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_text_data.png
-Project_NodeAI/docs/html/class_node_a_i_1_1_text_data-members.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_utility.html
-Project_NodeAI/docs/html/class_node_a_i_1_1_utility-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_app.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_app.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_app-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_database_search_window.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_database_search_window.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_database_search_window-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_main_window.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_main_window.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_main_window-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_connector.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_connector.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_connector-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_u_c.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_u_c.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node_u_c-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_node-members.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_window1.html
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_window1.png
-Project_NodeAI/docs/html/class_project___node_a_i_1_1_window1-members.html
-Project_NodeAI/docs/html/class_xaml_generated_namespace_1_1_generated_internal_type_helper.html
-Project_NodeAI/docs/html/class_xaml_generated_namespace_1_1_generated_internal_type_helper.png
-Project_NodeAI/docs/html/class_xaml_generated_namespace_1_1_generated_internal_type_helper-members.html
-Project_NodeAI/docs/html/classes.html
-Project_NodeAI/docs/html/closed.png
-Project_NodeAI/docs/html/dir_18baadb94e5a1c555a199decfbbac8d6.html
-Project_NodeAI/docs/html/dir_23728c7dc9fc1deba76a9db8a176728b.html
-Project_NodeAI/docs/html/dir_43724e81dd40e09f32417973865cdd64.html
-Project_NodeAI/docs/html/dir_4486fcb13f5d048ed22108b8dd6c672c.html
-Project_NodeAI/docs/html/dir_a404c407b50258a875677cca767ffb8d.html
-Project_NodeAI/docs/html/dir_a71c3b2ad23b9ff58220dd012d201987.html
-Project_NodeAI/docs/html/dir_b6bfbcc68dec38ccbcb6b152e691efc0.html
-Project_NodeAI/docs/html/dir_d051c76eebdc544d9c3d734575641c72.html
-Project_NodeAI/docs/html/dir_d47853e6fb8fbc7aaad40510cff11bbf.html
-Project_NodeAI/docs/html/doc.png
-Project_NodeAI/docs/html/doxygen.css
-Project_NodeAI/docs/html/doxygen.png
-Project_NodeAI/docs/html/dynsections.js
-Project_NodeAI/docs/html/folderclosed.png
-Project_NodeAI/docs/html/folderopen.png
-Project_NodeAI/docs/html/functions.html
-Project_NodeAI/docs/html/functions_func.html
-Project_NodeAI/docs/html/functions_prop.html
-Project_NodeAI/docs/html/functions_vars.html
-Project_NodeAI/docs/html/hierarchy.html
-Project_NodeAI/docs/html/index.html
-Project_NodeAI/docs/html/jquery.js
-Project_NodeAI/docs/html/menu.js
-Project_NodeAI/docs/html/menudata.js
-Project_NodeAI/docs/html/namespace_node_a_i.html
-Project_NodeAI/docs/html/namespace_node_a_i_1_1_nodes.html
-Project_NodeAI/docs/html/namespace_node_a_i_1_1_nodes_1_1_action_nodes.html
-Project_NodeAI/docs/html/namespace_node_a_i_1_1_nodes_1_1_event_nodes.html
-Project_NodeAI/docs/html/namespace_node_a_i_1_1_nodes_1_1_general_nodes.html
-Project_NodeAI/docs/html/namespace_node_a_i_1_1_properties.html
-Project_NodeAI/docs/html/namespace_project___node_a_i.html
-Project_NodeAI/docs/html/namespace_xaml_generated_namespace.html
-Project_NodeAI/docs/html/namespacemembers.html
-Project_NodeAI/docs/html/namespacemembers_enum.html
-Project_NodeAI/docs/html/namespaces.html
-Project_NodeAI/docs/html/nav_f.png
-Project_NodeAI/docs/html/nav_g.png
-Project_NodeAI/docs/html/nav_h.png
-Project_NodeAI/docs/html/open.png
-Project_NodeAI/docs/html/search/all_0.html
-Project_NodeAI/docs/html/search/all_0.js
-Project_NodeAI/docs/html/search/all_1.html
-Project_NodeAI/docs/html/search/all_1.js
-Project_NodeAI/docs/html/search/all_10.html
-Project_NodeAI/docs/html/search/all_10.js
-Project_NodeAI/docs/html/search/all_11.html
-Project_NodeAI/docs/html/search/all_11.js
-Project_NodeAI/docs/html/search/all_2.html
-Project_NodeAI/docs/html/search/all_2.js
-Project_NodeAI/docs/html/search/all_3.html
-Project_NodeAI/docs/html/search/all_3.js
-Project_NodeAI/docs/html/search/all_4.html
-Project_NodeAI/docs/html/search/all_4.js
-Project_NodeAI/docs/html/search/all_5.html
-Project_NodeAI/docs/html/search/all_5.js
-Project_NodeAI/docs/html/search/all_6.html
-Project_NodeAI/docs/html/search/all_6.js
-Project_NodeAI/docs/html/search/all_7.html
-Project_NodeAI/docs/html/search/all_7.js
-Project_NodeAI/docs/html/search/all_8.html
-Project_NodeAI/docs/html/search/all_8.js
-Project_NodeAI/docs/html/search/all_9.html
-Project_NodeAI/docs/html/search/all_9.js
-Project_NodeAI/docs/html/search/all_a.html
-Project_NodeAI/docs/html/search/all_a.js
-Project_NodeAI/docs/html/search/all_b.html
-Project_NodeAI/docs/html/search/all_b.js
-Project_NodeAI/docs/html/search/all_c.html
-Project_NodeAI/docs/html/search/all_c.js
-Project_NodeAI/docs/html/search/all_d.html
-Project_NodeAI/docs/html/search/all_d.js
-Project_NodeAI/docs/html/search/all_e.html
-Project_NodeAI/docs/html/search/all_e.js
-Project_NodeAI/docs/html/search/all_f.html
-Project_NodeAI/docs/html/search/all_f.js
-Project_NodeAI/docs/html/search/classes_0.html
-Project_NodeAI/docs/html/search/classes_0.js
-Project_NodeAI/docs/html/search/classes_1.html
-Project_NodeAI/docs/html/search/classes_1.js
-Project_NodeAI/docs/html/search/classes_2.html
-Project_NodeAI/docs/html/search/classes_2.js
-Project_NodeAI/docs/html/search/classes_3.html
-Project_NodeAI/docs/html/search/classes_3.js
-Project_NodeAI/docs/html/search/classes_4.html
-Project_NodeAI/docs/html/search/classes_4.js
-Project_NodeAI/docs/html/search/classes_5.html
-Project_NodeAI/docs/html/search/classes_5.js
-Project_NodeAI/docs/html/search/classes_6.html
-Project_NodeAI/docs/html/search/classes_6.js
-Project_NodeAI/docs/html/search/classes_7.html
-Project_NodeAI/docs/html/search/classes_7.js
-Project_NodeAI/docs/html/search/classes_8.html
-Project_NodeAI/docs/html/search/classes_8.js
-Project_NodeAI/docs/html/search/classes_9.html
-Project_NodeAI/docs/html/search/classes_9.js
-Project_NodeAI/docs/html/search/classes_a.html
-Project_NodeAI/docs/html/search/classes_a.js
-Project_NodeAI/docs/html/search/classes_b.html
-Project_NodeAI/docs/html/search/classes_b.js
-Project_NodeAI/docs/html/search/close.png
-Project_NodeAI/docs/html/search/enums_0.html
-Project_NodeAI/docs/html/search/enums_0.js
-Project_NodeAI/docs/html/search/enumvalues_0.html
-Project_NodeAI/docs/html/search/enumvalues_0.js
-Project_NodeAI/docs/html/search/enumvalues_1.html
-Project_NodeAI/docs/html/search/enumvalues_1.js
-Project_NodeAI/docs/html/search/enumvalues_2.html
-Project_NodeAI/docs/html/search/enumvalues_2.js
-Project_NodeAI/docs/html/search/functions_0.html
-Project_NodeAI/docs/html/search/functions_0.js
-Project_NodeAI/docs/html/search/functions_1.html
-Project_NodeAI/docs/html/search/functions_1.js
-Project_NodeAI/docs/html/search/functions_2.html
-Project_NodeAI/docs/html/search/functions_2.js
-Project_NodeAI/docs/html/search/functions_3.html
-Project_NodeAI/docs/html/search/functions_3.js
-Project_NodeAI/docs/html/search/functions_4.html
-Project_NodeAI/docs/html/search/functions_4.js
-Project_NodeAI/docs/html/search/functions_5.html
-Project_NodeAI/docs/html/search/functions_5.js
-Project_NodeAI/docs/html/search/functions_6.html
-Project_NodeAI/docs/html/search/functions_6.js
-Project_NodeAI/docs/html/search/functions_7.html
-Project_NodeAI/docs/html/search/functions_7.js
-Project_NodeAI/docs/html/search/functions_8.html
-Project_NodeAI/docs/html/search/functions_8.js
-Project_NodeAI/docs/html/search/functions_9.html
-Project_NodeAI/docs/html/search/functions_9.js
-Project_NodeAI/docs/html/search/functions_a.html
-Project_NodeAI/docs/html/search/functions_a.js
-Project_NodeAI/docs/html/search/functions_b.html
-Project_NodeAI/docs/html/search/functions_b.js
-Project_NodeAI/docs/html/search/functions_c.html
-Project_NodeAI/docs/html/search/functions_c.js
-Project_NodeAI/docs/html/search/mag_sel.png
-Project_NodeAI/docs/html/search/namespaces_0.html
-Project_NodeAI/docs/html/search/namespaces_0.js
-Project_NodeAI/docs/html/search/namespaces_1.html
-Project_NodeAI/docs/html/search/namespaces_1.js
-Project_NodeAI/docs/html/search/namespaces_2.html
-Project_NodeAI/docs/html/search/namespaces_2.js
-Project_NodeAI/docs/html/search/nomatches.html
-Project_NodeAI/docs/html/search/properties_0.html
-Project_NodeAI/docs/html/search/properties_0.js
-Project_NodeAI/docs/html/search/properties_1.html
-Project_NodeAI/docs/html/search/properties_1.js
-Project_NodeAI/docs/html/search/properties_2.html
-Project_NodeAI/docs/html/search/properties_2.js
-Project_NodeAI/docs/html/search/properties_3.html
-Project_NodeAI/docs/html/search/properties_3.js
-Project_NodeAI/docs/html/search/properties_4.html
-Project_NodeAI/docs/html/search/properties_4.js
-Project_NodeAI/docs/html/search/search.css
-Project_NodeAI/docs/html/search/search.js
-Project_NodeAI/docs/html/search/search_l.png
-Project_NodeAI/docs/html/search/search_m.png
-Project_NodeAI/docs/html/search/search_r.png
-Project_NodeAI/docs/html/search/searchdata.js
-Project_NodeAI/docs/html/search/variables_0.html
-Project_NodeAI/docs/html/search/variables_0.js
-Project_NodeAI/docs/html/splitbar.png
-Project_NodeAI/docs/html/sync_off.png
-Project_NodeAI/docs/html/sync_on.png
-Project_NodeAI/docs/html/tab_a.png
-Project_NodeAI/docs/html/tab_b.png
-Project_NodeAI/docs/html/tab_h.png
-Project_NodeAI/docs/html/tab_s.png
-Project_NodeAI/docs/html/tabs.css
-Project_NodeAI/docs/latex/annotated.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_action_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_app.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_app.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_creature_text.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_database_search_window.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_database_search_window.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_event_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_main_window.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_main_window.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_attribute.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_attribute.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_connector.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_connector.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_data.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_node_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_action_node.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_action_node.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_node_talk.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_action_nodes_1_1_node_talk.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_event_node.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_event_node.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_node_quest.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_event_nodes_1_1_node_quest.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_general_node.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_general_node.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_npc.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_npc.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_quest.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_quest.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_text.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_nodes_1_1_general_nodes_1_1_node_text.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_npc_data.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_npc_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_quest_data.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_quest_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_sql_exporter.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_text_data.eps
-Project_NodeAI/docs/latex/class_node_a_i_1_1_text_data.tex
-Project_NodeAI/docs/latex/class_node_a_i_1_1_utility.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_app.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_app.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_database_search_window.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_database_search_window.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_main_window.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_main_window.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node_connector.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node_connector.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node_u_c.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_node_u_c.tex
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_window1.eps
-Project_NodeAI/docs/latex/class_project___node_a_i_1_1_window1.tex
-Project_NodeAI/docs/latex/class_xaml_generated_namespace_1_1_generated_internal_type_helper.eps
-Project_NodeAI/docs/latex/class_xaml_generated_namespace_1_1_generated_internal_type_helper.tex
-Project_NodeAI/docs/latex/doxygen.sty
-Project_NodeAI/docs/latex/hierarchy.tex
-Project_NodeAI/docs/latex/make.bat
-Project_NodeAI/docs/latex/Makefile
-Project_NodeAI/docs/latex/namespace_node_a_i.tex
-Project_NodeAI/docs/latex/namespace_node_a_i_1_1_nodes.tex
-Project_NodeAI/docs/latex/namespace_node_a_i_1_1_nodes_1_1_action_nodes.tex
-Project_NodeAI/docs/latex/namespace_node_a_i_1_1_nodes_1_1_event_nodes.tex
-Project_NodeAI/docs/latex/namespace_node_a_i_1_1_nodes_1_1_general_nodes.tex
-Project_NodeAI/docs/latex/namespace_node_a_i_1_1_properties.tex
-Project_NodeAI/docs/latex/namespace_project___node_a_i.tex
-Project_NodeAI/docs/latex/namespace_xaml_generated_namespace.tex
-Project_NodeAI/docs/latex/namespaces.tex
-Project_NodeAI/docs/latex/refman.tex
+Project_NodeAI/docs/*
