Implemented several new event nodes

--- a/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
+++ b/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
@@ -158,30 +158,46 @@
     <Compile Include="Nodes\ActionNodes\ActionNode_Talk.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_ThreatSinglePct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_ActionDone.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Aggro.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_AIInit.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Charmed.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_CharmedTarget.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_CorpeRemoved.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_CounterSet.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Damaged.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_DamagedTarget.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_DataSet.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Death.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_DistanceCreature.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_DistanceGameObject.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Evade.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_EventPhaseChange.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_FollowCompleted.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyHealth.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_FriendlyHealthPct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyIsCC.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_FriendlyMissingBuff.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_GameEvent.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_GoEventInform.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_GossipHello.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_GoStateChanged.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_HasAura.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_HealthPct.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_IsBehindTarget.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_JustCreated.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_JustSummoned.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Kill.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_LOS.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_ManaPct.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_MovementInform.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_OnSpellClick.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Passenger.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Quest.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Range.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_ReachedHome.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_ReceiveEmote.cs" />
+    <Compile Include="Nodes\EventNodes\EventNode_ReceiveHeal.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Reset.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Respawn.cs" />
     <Compile Include="Nodes\EventNodes\EventNode_Spellhit.cs" />
