Combined NPC flag action nodes + implemented several new action nodes

--- a/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
+++ b/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
@@ -124,7 +124,6 @@
     <Compile Include="Nodes\ActionNodes\ActionNode.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_ActivateGObject.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_AddAura.cs" />
-    <Compile Include="Nodes\ActionNodes\ActionNode_AddNpcFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_AllowCombatMovement.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_AttackStart.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_AutoAttack.cs" />
@@ -132,27 +131,33 @@
     <Compile Include="Nodes\ActionNodes\ActionNode_Cast.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_CloseGossip.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_CombatStop.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_CrossCast.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_DynamicFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_Evade.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_FailQuest.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_FleeForAssist.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_Follow.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_IncEventPhase.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_InterruptSpell.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_InvokerCast.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_KillUnit.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_MorphToEntryOrModel.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_NpcFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_OfferQuest.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_PlayEmote.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_PlayRandomEmote.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_PlaySound.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_RandomMove.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_RemoveAurasFromSpell.cs" />
-    <Compile Include="Nodes\ActionNodes\ActionNode_RemoveNPCFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_RemoveUnitFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_ResetGObject.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_SendCustomAnim.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SetEmoteState.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SetEventPhase.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SetFaction.cs" />
-    <Compile Include="Nodes\ActionNodes\ActionNode_SetNpcFlag.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SetReactState.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SetUnitFlag.cs" />
+    <Compile Include="Nodes\ActionNodes\ActionNode_SimpleTalk.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SummonGObject.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_SummonCreature.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_Talk.cs" />
