Implemented node editor scrolling

--- a/Fancy-SAI-Editor/App.config
+++ b/Fancy-SAI-Editor/App.config
@@ -6,6 +6,9 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="NodeAI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="NodeAI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -48,4 +51,14 @@
       </setting>
     </NodeAI.Properties.Settings>
   </userSettings>
+  <applicationSettings>
+    <NodeAI.Properties.Settings>
+      <setting name="PanningMinOffset" serializeAs="String">
+        <value>1</value>
+      </setting>
+      <setting name="PanningRatio" serializeAs="String">
+        <value>1</value>
+      </setting>
+    </NodeAI.Properties.Settings>
+  </applicationSettings>
 </configuration>
