--- a/Fancy-SAI-Editor/Properties/Settings.settings
+++ b/Fancy-SAI-Editor/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="MysqlServer" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="PanningMinOffset" Type="System.Single" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="PanningRatio" Type="System.Single" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
