First step for reworking the complete node management system - WIP
* Created new singleton class 'NodeManager' which handles everything with interactions between nodes
* Moved everything which correlates with node interaction from MainWindow to NodeManager
   -> MainWindow should only initialize everything and handle certain events
* The new positioning system is planed with trees. Every node is content of a tree and these trees contains nodes connected to each other.

--- a/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
+++ b/Fancy-SAI-Editor/Fancy-SAI-Editor.csproj
@@ -121,6 +121,7 @@
       <DependentUpon>NodeConnector.xaml</DependentUpon>
     </Compile>
     <Compile Include="NodeMenuItem.cs" />
+    <Compile Include="NodeManager.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_ActivateGObject.cs" />
     <Compile Include="Nodes\ActionNodes\ActionNode_AddAura.cs" />
@@ -259,6 +260,7 @@
     <Compile Include="Nodes\TargetNodes\TargetNode_ThreatList.cs" />
     <Compile Include="Nodes\TargetNodes\TargetNode_VehicleAccessory.cs" />
     <Compile Include="Nodes\TargetNodes\TargetNode_Victim.cs" />
+    <Compile Include="NodeTree.cs" />
     <Compile Include="SharedDefines.cs" />
     <Compile Include="SqlExporter.cs" />
     <Page Include="DataWindow.xaml">
