NodeManager: Implemented scaling
* Added setting for scale ratio
* Added constructor param for NodeManager to pass the node editor canvas
* Implemented scaling with the mouse position as center

--- a/Fancy-SAI-Editor/App.config
+++ b/Fancy-SAI-Editor/App.config
@@ -59,6 +59,9 @@
       <setting name="PanningRatio" serializeAs="String">
         <value>1</value>
       </setting>
+      <setting name="ScaleRatio" serializeAs="String">
+        <value>1.1</value>
+      </setting>
     </NodeAI.Properties.Settings>
   </applicationSettings>
 </configuration>
