Fixed database initialization and added default value for sqlite connection file path

--- a/Fancy-SAI-Editor/App.config
+++ b/Fancy-SAI-Editor/App.config
@@ -35,7 +35,7 @@
   <userSettings>
     <NodeAI.Properties.Settings>
       <setting name="SQLiteDatabase" serializeAs="String">
-        <value />
+        <value>../../NodeAIDatabase.db</value>
       </setting>
       <setting name="MysqlUsername" serializeAs="String">
         <value />
