--- a/Fancy-SAI-Editor/Properties/Settings.settings
+++ b/Fancy-SAI-Editor/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="ConnectionPathColor" Type="System.Windows.Media.Color" Scope="Application">
       <Value Profile="(Default)">#FF164BA0</Value>
     </Setting>
+    <Setting Name="MysqlPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">3306</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
