--- a/Fancy-SAI-Editor/App.config
+++ b/Fancy-SAI-Editor/App.config
@@ -42,6 +42,9 @@
       <setting name="MysqlServer" serializeAs="String">
         <value />
       </setting>
+      <setting name="MysqlPort" serializeAs="String">
+        <value>3306</value>
+      </setting>
     </NodeAI.Properties.Settings>
   </userSettings>
   <applicationSettings>
