--- a/Fancy-SAI-Editor/packages.config
+++ b/Fancy-SAI-Editor/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.6.0" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.6" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.107.0" targetFramework="net461" />
